<resources>
    <string name="pref_sabre_summary">"EXPERIMENTAL
Increases sharpness but may increase processing time as well"</string>
    <string name="pref_model_title">Model</string>
    <string name="pref_config_summary">"Modifies frame count among other things
SELECTED: %s"</string>
    <string name="pref_fickle_summary">"Modifies the amount of frames merged together
SELECTED: %s"</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="pref_model_back_default">7</string>
    <string name="pref_model_front_default">1</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="pref_model_1">Nexus 5X</string>
    <string name="pref_model_2">Nexus 6P</string>
    <string name="pref_model_3">Pixel XL</string>
    <string name="pref_model_5">Pixel 2 XL</string>
    <string name="pref_model_7">Pixel 3 XL</string>
    <string name="pref_model_9">Pixel 3a XL</string>
    <string name="pref_value_back_title">Back camera</string>
    <string name="pref_value_front_title">Front camera</string>
    <string name="model_ps_title">Input Model</string>
    <string name="quality_title">Quality HDR+:</string>
    <string name="quality_default">8</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="quality_low">Low(default GCam) - 8 frames</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="quality_med">Medium - 12 frames</string>
    <string name="quality_high">High - 16 frames</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_burst_capture">Take burst</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_stopped">Capture stopped</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start cheetah</string>
    <string name="accessibility_cheetah_video_stop">Stop cheetah</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_imax_too_much_tilt_down">Move up slightly</string>
    <string name="accessibility_imax_too_much_tilt_left">Move right slightly</string>
    <string name="accessibility_imax_too_much_tilt_right">Move left slightly</string>
    <string name="accessibility_imax_too_much_tilt_up">Move down slightly</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_photobooth_shutter_start">Start Photobooth Mode</string>
    <string name="accessibility_photobooth_shutter_stop">Stop Photobooth Mode</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="exposure_title">Exposure compensation</string>
    <string name="exposure_default">0</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="pref_exposure_0">-2,0</string>
    <string name="pref_exposure_1">-1,8</string>
    <string name="pref_exposure_2">-1,6</string>
    <string name="pref_exposure_3">-1,4</string>
    <string name="pref_exposure_4">-1,2</string>
    <string name="pref_exposure_5">-1,0</string>
    <string name="pref_exposure_6">-0,8</string>
    <string name="pref_exposure_7">-0,6</string>
    <string name="pref_exposure_8">-0,4</string>
    <string name="pref_exposure_9">-0,2</string>
    <string name="pref_exposure_10">0</string>
    <string name="pref_exposure_11">+0,2</string>
    <string name="pref_exposure_12">+0,4</string>
    <string name="pref_exposure_13">+0,6</string>
    <string name="pref_exposure_14">+0,8</string>
    <string name="action_share_chooser_title">Share with</string>
    <string name="pref_exposure_15">+1,0</string>
    <string name="pref_exposure_16">+1,2</string>
    <string name="pref_exposure_17">+1,4</string>
    <string name="pref_exposure_18">+1,6</string>
    <string name="pref_exposure_19">+1,8</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="pref_exposure_20">+2,0</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_desc">Autofocus</string>
    <string name="af_option_tooltip">Focus options</string>
    <string name="pref_auxbackcamera_title">Switch to the 2nd auxiliary camera</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="auto">Auto</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_section_header_all">All Photos</string>
    <string name="burst_editor_section_header_best">Best Photos</string>
    <string name="burst_name">Smartburst</string>
    <string name="burst_process_creation">Saving</string>
    <string name="burst_process_done">All items processed</string>
    <string name="burst_text">Smartburst</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_id_back_desc">Switch to front camera</string>
    <string name="camera_id_front_desc">Switch to back camera</string>
    <string name="camera_menu_settings_label">@string/mode_settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="cancel_panorama">Discard Panorama</string>
    <string name="cancel_photo_sphere">Discard Photo Sphere</string>
    <string name="capture_error">Capture error</string>
    <string name="center">Center</string>
    <string name="cheetah_description">Records videos at faster speeds</string>
    <string name="cheetah_name">Cheetah</string>
    <string name="cling_text_for_refocus_editor_button">To refocus, tap here</string>
    <string name="close">Close</string>
    <string name="collage">Collage</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="double_tap_zoom">Zoom</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_camera_dirty_lens_summary">Display warning when the lens may be too dirty to take high-quality pictures. Wiping off the lens may help.</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_double_tap_action_title">Double-tap action</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_iris_title">Google Lens suggestions</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_hdr_plus_control_summary">Show manual control for HDR+. When this setting is off, HDR+ stays on all the time.</string>
    <string name="pref_hdr_plus_control_title">HDR+ control</string>
    <string name="pref_hevc_control_summary">Use H.265/HEVC format instead of H.264/AVC for a smaller file size. HEVC may not be supported on some platforms.</string>
    <string name="pref_raw_output_control_summary">Show manual control for RAW+JPEG. The RAW (DNG) file is saved separately to a device folder in Google Photos. This uses additional storage.</string>
    <string name="pref_raw_output_control_title">RAW+JPEG control</string>
    <string name="pref_video_hevc">Store videos efficiently</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="setting_back_camera_photo">Back camera photo resolution</string>
    <string name="setting_back_camera_video">Back camera video resolution</string>
    <string name="setting_front_camera_photo">Front camera photo resolution</string>
    <string name="setting_front_camera_video">Front camera video resolution</string>
    <string name="setting_general">General</string>
    <string name="setting_grid_mode">Grid type</string>
    <string name="volume_key_shutter">Shutter</string>
</resources>