<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="prefscreen_top"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_category_first_layout" android:title="@string/setting_general" android:key="pref_category_general">
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_room_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_save_location_title" android:key="pref_camera_recordlocation_key" android:order="0" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_volume_up_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_sounds_title" android:key="pref_camera_sounds_key" android:order="1" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_google_lens_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_iris_title" android:key="pref_camera_enable_iris" android:order="2" android:defaultValue="false" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_touch_app_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_gestures_title" android:key="pref_category_gestures" android:order="3">
            <ListPreference android:entries="@array/pref_volume_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_volume_key_action_title" android:key="pref_volume_key_action" android:summary="%s" android:defaultValue="@string/volume_key_shutter" android:entryValues="@array/pref_volume_action_entryvalues" />
            <ListPreference android:entries="@array/pref_double_tap_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_double_tap_action_title" android:key="pref_double_tap_key" android:summary="%s" android:defaultValue="@string/double_tap_zoom" android:entryValues="@array/pref_double_tap_entryvalues" />
        </PreferenceScreen>
        <ListPreference android:icon="@drawable/quantum_gm_ic_grid_on_gm_grey_24" android:entries="@array/pref_grid_mode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_grid_mode" android:key="pref_camera_grid_lines_mode" android:summary="%s" android:order="4" android:defaultValue="0" android:entryValues="@array/pref_grid_mode_entryvalues" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_category_advanced" android:key="pref_category_advanced" android:order="255">
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_dirty_lens_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_dirty_lens_title" android:key="pref_dirty_lens_detector_key" android:summary="@string/pref_camera_dirty_lens_summary" android:defaultValue="true" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_hdr_plus_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_hdr_plus_control_title" android:key="pref_camera_hdrplus_option_available_key" android:summary="@string/pref_hdr_plus_control_summary" android:defaultValue="false" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_raw_on_gm2_grey_24px" android:layout="@layout/preference_with_action_button" android:title="@string/pref_raw_output_control_title" android:key="pref_camera_raw_output_option_available_key" android:summary="@string/pref_raw_output_control_summary" android:defaultValue="false" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_hevc_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_hevc" android:key="pref_video_hevc_setting_key" android:summary="@string/pref_hevc_control_summary" android:defaultValue="false" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_photo_camera_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_auxbackcamera_title" android:key="pref_auxbackcamera_key" android:summary="It uses 2nd lens" android:defaultValue="false" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_photo_camera_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="Use 3rd auxiliary camera" android:key="pref_aux3rdcamera_key" android:summary="It uses 3rd lens" android:dependency="pref_auxbackcamera_key" android:defaultValue="false" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/hamburger" android:layout="@layout/preference_with_margin_blue" android:title="Mod Settings" android:key="pref_category_developer2" android:order="256">
            <PreferenceCategory android:layout="@layout/preference_category_first_layout" android:title="General" android:key="pref_category_general">
                <ListPreference android:icon="@drawable/quantum_gm_ic_quality_gm_grey_24" android:entries="@array/quality_entries" android:layout="@layout/hide" android:title="@string/quality_title" android:key="quality_key" android:summary="%s" android:defaultValue="@string/quality_default" android:entryValues="@array/quality_entryvalues" />
                <ListPreference android:icon="@drawable/quantum_gm_ic_EV_grey_24" android:entries="@array/exposure_entries" android:layout="@layout/hide" android:title="@string/exposure_title" android:key="pref_exposure_key" android:summary="%s" android:defaultValue="@string/exposure_default" android:entryValues="@array/exposure_entryvalues" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/account_search_outline" android:layout="@layout/preference_with_margin" android:title="Portrait Zoom" android:key="pref_pzoom_key" android:summary="Disable zoom in portrait mode" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/account_plus_outline" android:layout="@layout/preference_with_margin" android:title="Portrait HDR+ Enhanced" android:key="pref_portenh_bsg" android:summary="Increase dynamic range in Portrait Mode" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/google_photos" android:layout="@layout/preference_with_margin" android:title="Google Photos for Image Preview" android:key="pref_use_gphotos" android:summary="View photos in Google Photos" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:layout="@layout/hide" android:title="Night Sight" android:key="pref_category_general">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/tooltip_text_outline" android:layout="@layout/hide" android:title="Permanent Night Sight Suggestion" android:key="pref_permns_key" android:summary="Quicker access to Night Sight" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/weather_night" android:layout="@layout/hide" android:title="Increase Tripod Capture Time" android:key="pref_max_tripod" android:summary="Increases the frame count and the exposure time if steadily mounted" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:layout="@layout/preference_category_layout" android:title="Pixel 3 Features" android:key="pref_category_general">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/white_balance_auto" android:layout="@layout/preference_with_margin" android:title="AI AWB in HDR Enhanced" android:key="pref_enh_aiwb" android:summary="Pixel 3 default setting is on" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/star_four_points_outline" android:layout="@layout/preference_with_margin" android:title="Top Shot" android:key="pref_top_shot" android:summary="Recommends better photos in certain conditions. Requires Motion Auto or On and Google Photos Daydream." android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_photobooth_mode" android:layout="@layout/preference_with_margin" android:title="Photobooth" android:key="pref_photobooth" android:summary="A new mode that automatically takes selfies" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/image_filter_center_focus_weak" android:layout="@layout/preference_with_margin" android:title="Focus Tracking" android:key="pref_track_focus" android:summary="Follows the subject you tap to focus on" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:layout="@layout/hide" android:title="Experimental" android:key="pref_category_general">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/details" android:layout="@layout/hide" android:title="Super Res Always On" android:key="pref_always_sabre" android:summary="@string/pref_sabre_summary" android:defaultValue="false" />
                <ListPreference android:icon="@drawable/hdr" android:entries="@array/pref_config_entries" android:layout="@layout/hide" android:title="HDR+ Config" android:key="pref_config_key" android:summary="@string/pref_config_summary" android:defaultValue="0" android:entryValues="@array/pref_config_entryvalues" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/call_merge" android:layout="@layout/hide" android:title="Disable Align" android:key="pref_disable_align" android:summary="Disables alignment of HDR+" android:defaultValue="false" />
                <PreferenceScreen android:icon="@drawable/quantum_ic_camera" android:layout="@layout/hide" android:title="@string/model_ps_title" android:key="base_key" android:summary="Change model on front and back camera">
                    <PreferenceCategory android:title="@string/pref_model_title" android:key="model_key">
                        <ListPreference android:icon="@drawable/ic_camera_rear_24" android:entries="@array/pref_model_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_value_back_title" android:key="pref_model_back_key" android:summary="%s" android:defaultValue="@string/pref_model_back_default" android:entryValues="@array/pref_model_entryvalues" />
                        <ListPreference android:icon="@drawable/ic_camera_front_24" android:entries="@array/pref_model_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_value_front_title" android:key="pref_model_front_key" android:summary="%s" android:defaultValue="@string/pref_model_front_default" android:entryValues="@array/pref_model_entryvalues" />
                    </PreferenceCategory>
                </PreferenceScreen>
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/settings_outline" android:layout="@layout/preference_with_margin" android:title="Manual Exposure Control" android:key="pref_shutter_key" android:summary="Enable manual shutter speed slider" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/settings_outline" android:layout="@layout/preference_with_margin" android:title="Manual Focus Control" android:key="pref_focus_key" android:summary="Enable manual focus slider. Will internally disable Tracking Focus for compatibility." android:defaultValue="false" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/photo" android:key="pref_category_resolution_camera">
        <ListPreference android:icon="@drawable/quantum_gm_ic_photo_camera_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_photo" android:key="pref_camera_picturesize_back_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <ListPreference android:icon="@drawable/quantum_gm_ic_photo_camera_front_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_photo" android:key="pref_camera_picturesize_front_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mode_video" android:key="pref_category_resolution_video">
        <ListPreference android:icon="@drawable/quantum_gm_ic_video_camera_back_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_video" android:key="pref_video_quality_back_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <ListPreference android:icon="@drawable/tmp_ic_video_camera_front_gm_grey" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_video" android:key="pref_video_quality_front_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_video_stable_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_stabilization" android:key="pref_video_stabilization_key" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
